# pocket-dial-handset

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/sip_core/: CMakeLists.txt  IDGen.hpp  SipMessage.cpp  SipMessage.hpp  SipMessageFactory.cpp  SipMessageFactory.hpp  SipMessageTypes.h  SipSdpMessage.cpp  SipSdpMessage.hpp
main/: CMakeLists.txt  app_main.cpp  audio_io.c  audio_io.h  board_mvsr.h  g711.c  g711.h  media_tasks.cpp  media_tasks.h  net_wifi.c  net_wifi.h  playout_buffer.cpp  playout_buffer.hpp  poc_config.h  rtp.h  sip_uac.cpp  sip_uac.h
